--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-lg-4">
             
             <h2>Carrier<img class="img-circle" src="static/fonts/rocket.svg" alt="carrier image" width="80" height="80"></h2>
-            <p>I currently work as a Software Developer at the Datamining and Search Group of the Institute for Computer Science and Control, Hungarian Academy of Sciences</p>
+            <p>I currently work as a Data Scientist and Research Associate at the Hungarian Institute for Computer Science and Control (SZTAKI)</p>
         </div>
         <div class="col-lg-4">
             <h2>Education<img class="img-circle" src="static/fonts/study.svg" alt="education image" width="80" height="80"></h2>
@@ -131,8 +131,8 @@
                     <msg>I was part of the <a class="wlink" href="https://recsys-challenge.spotify.com/static/final_main_leaderboard.html">Definitive Turtles</a> team that achieved 9th prize at the ACM Recommender System Conference Challenge. The main track task was to predict the continuation of Spotify playlists. You can read about <a class="wlink" href="https://dl.acm.org/citation.cfm?id=3267477">our K-NN based solution</a> in the conference proceedings.</msg>
                 </div>
                 <div class="grid-item sztaki">
-                    <h2>DMS Group Software Developer</h2>
-                    <msg> Since 2014, I have been working in the Datamining and Search Group (<a class="wlink" href="https://dms.sztaki.hu/">DMS</a>) <br> at <a class="wlink" href="https://www.sztaki.hu/mtasztaki/az_intezet/">SZTAKI</a> as a Software Developer. In the last few years, I have been working on data mining projects.</msg>
+                    <h2>SZTAKI Data Scientist</h2>
+                    <msg> Since 2014, I have been working as a Data Scientist at the Institute for Computer Science and Control (<a class="wlink" href="https://www.sztaki.hu/tudomany/reszlegek/infolab">(SZTAKI)</a>) <br>. In the last few years, I have been working on industrial as well as research projects. I also participated in Data Science teaching courses for companies held by our department.</msg>
                 </div>
                 <div class="grid-item conf">
                     <h2>Complex Networks 2017</h2>
@@ -157,7 +157,7 @@
             </div>
         </div>
     </div>
-    
+   
     <!--div class="row">
         <a href="#contact" class="btn btn-circle page-scroll">
             <i class="fa fa-angle-double-down animated"></i>
