--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
         </div>
         <div class="col-lg-4">
             <h2>Education<img class="img-circle" src="static/fonts/study.svg" alt="education image" width="80" height="80"></h2>
-            <p>I graduated at Eötvös Loránd University in 2015 as an applied mathematician. I am interested in datamining and dynamic graphs.</p>
+            <p>I graduated at Eötvös Loránd University in 2015 as an applied mathematician. I am interested in data mining and dynamic graphs.</p>
         </div>
         <div class="col-lg-4">
             <h2>Repositories<img class="img-circle" src="static/fonts/drawer.svg" alt="repsitories image" width="80" height="80"></h2>
-            <p>If you are interested in the projects or the research I am working on, you can check out my GitHub repositories.</p>
+            <p>If you are interested in the projects or the research I am working on, check out my GitHub profile.</p>
         </div>
     </div>
     
@@ -131,7 +131,7 @@
                     <msg>I was part of the <a class="wlink" href="https://recsys-challenge.spotify.com/static/final_main_leaderboard.html">Definitive Turtles</a> team that achieved 9th prize at the ACM Recommender System Conference Challenge. The main track task was to predict the continuation of Spotify playlists. You can read about <a class="wlink" href="https://dl.acm.org/citation.cfm?id=3267477">our K-NN based solution</a> in the conference proceedings.</msg>
                 </div>
                 <div class="grid-item sztaki">
-                    <h2>SZTAKI Data Scientist</h2>
+                    <h2>Data Scientist & Research Associate at SZTAKI</h2>
                     <msg> Since 2014, I have been working as a Data Scientist at the Institute for Computer Science and Control (<a class="wlink" href="https://www.sztaki.hu/tudomany/reszlegek/infolab">(SZTAKI)</a>) <br>. In the last few years, I have been working on industrial as well as research projects. I also participated in Data Science teaching courses for companies held by our department.</msg>
                 </div>
                 <div class="grid-item conf">
