--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                     <msg>I was part of the <a class="wlink" href="https://recsys-challenge.spotify.com/static/final_main_leaderboard.html">Definitive Turtles</a> team that achieved 9th prize at the ACM Recommender System Conference Challenge. The main track task was to predict the continuation of Spotify playlists. You can read about <a class="wlink" href="https://dl.acm.org/citation.cfm?id=3267477">our K-NN based solution</a> in the conference proceedings.</msg>
                 </div>
                 <div class="grid-item sztaki">
-                    <h2>Data Scientist & Research Associate at SZTAKI</h2>
-                    <msg> Since 2014, I have been working as a Data Scientist at the Institute for Computer Science and Control (<a class="wlink" href="https://www.sztaki.hu/tudomany/reszlegek/infolab">(SZTAKI)</a>) <br>. In the last few years, I have been working on industrial as well as research projects. I also participated in Data Science teaching courses for companies held by our department.</msg>
+                    <h2>Data Scientist at SZTAKI</h2>
+                    <msg> Since 2014, I have been working as a Data Scientist at the Institute for Computer Science and Control <a class="wlink" href="https://www.sztaki.hu/tudomany/reszlegek/infolab">(SZTAKI)</a> <br>. In the last few years, I have been working on industrial as well as research projects. I also participated in Data Science teaching courses for companies held by our department.</msg>
                 </div>
                 <div class="grid-item conf">
                     <h2>Complex Networks 2017</h2>
