size update in css

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="grid-item sztaki">
                     <h2>Data Scientist at SZTAKI</h2>
-                    <msg> Since 2014, I have been working as a Data Scientist at the Institute for Computer Science and Control <a class="wlink" href="https://www.sztaki.hu/tudomany/reszlegek/infolab">(SZTAKI)</a> <br>. In the last few years, I have been working on industrial as well as research projects. I also participated in Data Science teaching courses for companies held by our department.</msg>
+                    <msg> Since 2014, I have been working as a Data Scientist at the Institute for Computer Science and Control <a class="wlink" href="https://www.sztaki.hu/tudomany/reszlegek/infolab">(SZTAKI)</a> <br>. In the last few years, I have been working on industrial and research projects. I also participated in Data Science teaching courses for companies held by our department.</msg>
                 </div>
                 <div class="grid-item conf">
                     <h2>Complex Networks 2017</h2>
