--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</header>
 						<p>My research interests focus on, but not limited to <b>network embeddings</b>, temporally evolving social and cryptocurrency networks, and machine learning. 
 						<br />I am currently a PhD student in the Faculty of Informatics at Eötvös University, starting 2016.
-						<br />Since 2014, I work as a Data Scientist at the Hungarian Institute of Computer Science and Control.
+						<br />Since 2014, I work as a Data Scientist at the Hungarian Institute for Computer Science and Control.
 						<br />In my free time, I am usually having fun with my children but I also like playing volleyball or hiking.
 					    <br />Feel free to contact me if you are interested in my research.</p>
 						<ul class="actions">
