--- a/index.html
+++ b/index.html
@@ -88,6 +88,60 @@
 					</section>
 
 
+					<section id="three">
+						<h2>What's new</h2>
+						<div id="timeline">
+							<div>
+								<section class="year">
+									<h3>2021</h3>
+									<section>
+										<h4>November</h4>
+									    <ul>
+											<li> I present an <a href="https://arxiv.org/abs/2110.13619"><b>extended abstract</b></a> at the 10th International Conference on Complex Networks and their Applications.</li>
+											<li> One paper won the <a href="https://www.cikm2021.org/programme/best-paper-nominations"><b>best paper award</b></a> in CIKM 2021.</li>
+										</ul>
+									</section>
+									<section>
+										<h4>September</h4>
+									    <ul>
+											<li> One <a href="https://arxiv.org/abs/2110.13619"><b>work</b></a> was accepted at Complex Networks 2021. We release the related Twitter data and source code on <a href="https://github.com/ferencberes/covid-vaccine-network"><b>GitHub</b></a><//li>.
+											<li> I started to work with two applied mathematician students on their <a href="https://math-projects.elte.hu/projects/"><b>school project</b></a>: Social network mining in data-intensive applications.</li>
+											
+										</ul>
+									</section>
+									<section>
+										<h4>August</h4>
+									    <ul>
+									    	<li>I presented a <a href="https://ieeexplore.ieee.org/document/9566179"><b>paper</b></a> at the DAPPS 2021 conference.</li>
+											<li> One paper was accepted at CIKM 2021 (Proceedings of the 30th ACM International Conference on Information and Knowledge Management). </li>
+										</ul>
+									</section>
+									<section>
+										<h4>June</h4>
+									    <ul>
+											<li> One <a href="https://ieeexplore.ieee.org/document/9566179"><b>paper</b></a> was accepted at DAPPS 2021 (International Conference on Decentralized Applications and Infrastructures.</li>
+										</ul>
+									</section>
+									<section>
+										<h4>January</h4>
+									    <ul>
+											<li> I started to collect Twitter data related to COVID-19 vaccination. Our goal is to monitor the online sentiment related to major vaccines. Later, we plan to discover anti-vaxxer user clusters with network embedding.</li>
+										</ul>
+									</section>
+								</section>
+								<!--section class="year">
+									<h3>2020</h3>
+									<section>
+										<h4>September</h4>
+									    <ul>
+											<li></li>
+										</ul>
+									</section>
+								</section>
+							</div-->
+						</div>
+					</section>
+
 				<!-- Three -->
 					<section id="four">
 						<h2>Get In Touch</h2>
