timeline updates until 2019

--- a/index.html
+++ b/index.html
@@ -129,16 +129,49 @@
 										</ul>
 									</section>
 								</section>
-								<!--section class="year">
+								<section class="year">
 									<h3>2020</h3>
 									<section>
-										<h4>September</h4>
+										<h4>August</h4>
 									    <ul>
-											<li></li>
+											<li>I started to collect geotagged tweets related to trekking, hiking, or mountaineering. We intend to track users over multiple trekking sites and trails. We are also interested in trekking behavior changes related to Covid-19.</li>
+										</ul>
+									</section>
+									<section>
+										<h4>May</h4>
+									    <ul>
+											<li>Published a <a href="https://arxiv.org/abs/2005.14051"><b>preprint</b></a> where we study the privacy implication of Ethereum's account-based model. In the cryptocurrency domain, we are the first to deploy node embeddings to profile and deanonymize Ethereum Users.</li>
+										</ul>
+									</section>
+									<section>
+										<h4>March</h4>
+									    <ul>
+											<li>I presented our <a href="https://arxiv.org/abs/1911.09432"><b>work</b></a> at the <a href="https://cryptoeconomicsystems.pubpub.org/ces20-program"><b>Cryptoeconomic Systems Conference '20</b></a> at MIT. It was my first trip to the US. Thank you for the opportunity!</li>
 										</ul>
 									</section>
 								</section>
-							</div-->
+								<section class="year">
+									<h3>2019</h3>
+									<section>
+										<h4>August</h4>
+									    <ul>
+											<li>A <a href="https://appliednetsci.springeropen.com/articles/10.1007/s41109-019-0169-5"><b>journal paper</b></a> was published where we propose multiple node embedding models for dynamic graphs.</li>
+										</ul>
+									</section>
+									<section>
+										<h4>July</h4>
+									    <ul>
+											<li>My company enrolled me in the DeepLearn 2019 Summer School. Thank you for the opportunity to educate myself on neural network architectures!</li>
+										</ul>
+									</section>
+									<section>
+										<h4>January</h4>
+									    <ul>
+											<li>We achieved 10th prize on the WSDMCup 2019. We published our solution in a <a href="https://people.eng.unimelb.edu.au/jianzhongq/wsdm19-cup-reports/reports/report16.pdf"><b>paper</b></a>: Sequential skip prediction using deep learning and ensembles.</li>
+										</ul>
+									</section>
+								</section>
+							</div>
 						</div>
 					</section>
 
