hungarian booklet linked

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 							<li><a href="files/CV.pdf" download="CV" class="button">My Curriculum Vitae</a></li>
 							<li><a href="files/phd/thesis.pdf" download="thesis" class="button">PhD Thesis</a></li>
 							<li><a href="files/phd/booklet.pdf" download="booklet" class="button">PhD Booklet</a></li>
+							<li><a href="files/phd/booklet_hungarian.pdf" download="booklet_hungarian" class="button">Tézisfüzet</a></li>
 						</ul>
 					</section>
 
