--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a class="image avatar"><img src="images/Ferenc_Beres.png" alt="" /></a>
-					<h1><strong>I am Ferenc Beres,</strong><br /> PhD student in Network Science &<br> Data Scientist at <a href="https://www.sztaki.hu/en/science/departments/infolab">ELKH SZTAKI</a>.<br>
+					<h1><strong>I am Ferenc Béres,</strong><br /> a Research Fellow in the AI research group at <a href="https://sztaki.hun-ren.hu/">HUN-REN SZTAKI</a>.<br>
 					Welcome to my homepage! </h1>
 				</div>
 			</header>
@@ -28,14 +28,15 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ferenc Beres</h2>
+							<h2>Ferenc Béres, PhD</h2>
 						</header>
-						<p>My research interests focus on, but not limited to <b>network embeddings</b>, temporally evolving social and cryptocurrency networks, and machine learning. 
-						<br />I am currently a PhD student in the Faculty of Informatics at Eötvös University, starting 2016.
-						<br />Since 2014, I work as a Data Scientist at the Hungarian Institute for Computer Science and Control.
-						<br />In my free time, I am usually having fun with my children but I also like playing volleyball or hiking.
-						<br />In August 2022, I submitted my PhD thesis on mining social and cryptocurrency networks. 
-						<br />My public PhD defense is due on 30 January 2023. Find the links to my thesis and booklets below.
+						
+						<p>I have a PhD in Informatics with a research focus on Network Science and Machine Learning.
+						<br />My research interests focus on, but not limited to <b>graph representation learning</b>, temporally evolving social and cryptocurrency networks, and machine learning. 
+						<br />Since 2014, I work at the Hungarian Institute for Computer Science and Control (HUN-REN SZTAKI).
+						<br />If you're interested what I'm doing at SZTAKI, check out my CV below.
+						<br />In my free time, I'm usually having fun with my children but I also like playing volleyball and hiking.
+						<br />Find the links to my PhD thesis and booklets below.
 					    <br />Feel free to contact me if you are interested in my research.</p>
 						<ul class="actions">
 							<li><a href="files/CV.pdf" download="CV" class="button">My Curriculum Vitae</a></li>
@@ -51,8 +52,8 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/thumbs/vaccine_skepticism_detection.png" class="image fit thumb"><img src="images/thumbs/vaccine_skepticism_detection.png" alt="" width="200"/></a>
-								<h3><b>Vaccine skepticism detection by network embedding.</b> <a href="https://arxiv.org/abs/2110.13619">[extended abstract]</a></h3>
-								<p><b>Ferenc Beres</b>, Rita Csoma, Tamas Vilmos Michaletzky, and Andras A. Benczur</p>
+								<h3><b>Network embedding aided vaccine skepticism detection.</b> <a href="https://link.springer.com/article/10.1007/s41109-023-00534-x">[paper]</a></h3>
+								<p><b>Ferenc Beres</b>, Tamas Vilmos Michaletzky, Rita Csoma, and Andras A. Benczur</p>
 						   </article>
 						<!-- </div>
 						<div class="row"> -->
@@ -98,11 +99,22 @@
 						<div id="timeline">
 							<div>
 								<section class="year">
+									<h3>2025</h3>
+									<section>
+										<h4>September</h4>
+									    <ul>
+											<li> I'm going to be a presenter at the <a href="https://vandorgyules.mee.hu/program"><b>71st Wandering Assembly Conference and Exhibition</b></a>. The title for my presentation is: The evolution of data-driven solutions in energy: from traditional machine learning to explainable deep learning</li>
+										</ul>
+										<h4>March</h4>
+									    <ul>
+											<li> I gave a talk at the Artifical Intelligence National Laboratory (MILAB) Meetup series dedicated to <a href="https://mi.nemzetilabor.hu/news/ai-energy-artifical-intelligence-national-laboratory-hosts-its-10th-meetup"><b>AI and Energy</b></a></li>
+										</ul>
+									</section>
 									<h3>2023</h3>
 									<section>
 										<h4>January</h4>
 									    <ul>
-											<li> My public PhD defense is due on 30 January. Find my <a href="files/phd/thesis.pdf"><b>thesis</b></a> and <a href="files/phd/booklet.pdf"><b>booklet</b></a> by following the links.</li>
+											<li> I defended my PhD with grade summa cum laude. Find my <a href="files/phd/thesis.pdf"><b>thesis</b></a> and <a href="files/phd/booklet.pdf"><b>booklet</b></a> by following the links.</li>
 										</ul>
 									</section>
 									<h3>2022</h3>
