--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a class="image avatar"><img src="images/Ferenc_Beres.png" alt="" /></a>
-					<h1><strong>I am Ferenc Béres,</strong><br /> a Research Fellow in the AI research group at <a href="https://sztaki.hun-ren.hu/">HUN-REN SZTAKI</a>.<br>
+					<h1><strong>I am Ferenc Béres,</strong><br /> a Research Fellow in the AI research group<br /> at <a href="https://sztaki.hun-ren.hu/">HUN-REN SZTAKI</a>.<br>
 					Welcome to my homepage! </h1>
 				</div>
 			</header>
@@ -32,12 +32,11 @@
 						</header>
 						
 						<p>I have a PhD in Informatics with a research focus on Network Science and Machine Learning.
-						<br />My research interests focus on, but not limited to <b>graph representation learning</b>, temporally evolving social and cryptocurrency networks, and machine learning. 
+						<br />My research interests focus on, but not limited to <b>graph representation learning</b>, temporally evolving social<br /> and cryptocurrency networks, and machine learning. 
 						<br />Since 2014, I work at the Hungarian Institute for Computer Science and Control (HUN-REN SZTAKI).
 						<br />If you're interested what I'm doing at SZTAKI, check out my CV below.
 						<br />In my free time, I'm usually having fun with my children but I also like playing volleyball and hiking.
 						<br />Find the links to my PhD thesis and booklets below.
-					    <br />Feel free to contact me if you are interested in my research.</p>
 						<ul class="actions">
 							<li><a href="files/CV.pdf" download="CV" class="button">My Curriculum Vitae</a></li>
 							<li><a href="files/phd/thesis.pdf" download="thesis" class="button">PhD Thesis</a></li>
